fixed spacing issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,7 +22,6 @@ body{
 input{
   display: block;
   margin: 0 auto;
-  text-align: center;
   padding: 3px;
   margin-bottom: 10px;
 }
